--- a/index.html
+++ b/index.html
@@ -495,7 +495,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
+        <script data-no-instant>InstantClick.init();</script>
+
         <script src="./assets/js/main.min.js"></script>
+        <script src="./assets/js/gsap.js"></script>
         <script src="./assets/js/index/main.min.js"></script>
     </body>
 </html>
