--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
                 </ul>
             </div>
             <div class="footer-copyright">
-                <div class="text light one">Copyright © 2021 Punto. All Rights Reserved.</div>
+                <div class="visibly-hidden">Copyright © 2021 Punto. All Rights Reserved. Hi rag's</div>
+                <div class="text light one notextselect"></div>
             </div>
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -495,9 +496,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
-        <script data-no-instant>InstantClick.init();</script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
         <script src="./assets/js/main.min.js"></script>
         <script src="./assets/js/gsap.js"></script>
