Fonts and fixes

--- a/info/index.html
+++ b/info/index.html
@@ -169,9 +169,9 @@
             </section>
 
             <section id="/about" class="section section-headline-about two">
-                <div class="section-content dynamic-width">
+                <div class="section-content width-fit-content">
                     <div class="section-header justify-content-center width-fit-content">
-                        <h2 class="text light header jumbo one">About us</h2>
+                        <h2 class="text light header jumbo one width-fit-content">About&nbspus</h2>
                     </div>
                 </div>
             </section>
