--- a/info/index.html
+++ b/info/index.html
@@ -51,7 +51,7 @@
         <link href="../assets/css/main-forinfo.css" rel="stylesheet" type="text/css" />
         <link href="../assets/css/info.css" rel="stylesheet" type="text/css" />
     </head>
-    <body class="visibly-hidden">
+    <body class="visibly-hidden" data-page-id="punto-inf-index">
 
         <nav class="globalnav notextselect" role="navigation">
             <div class="globalnav-content" style="overflow: hidden;">
@@ -78,9 +78,9 @@
                     </div>
                     <ul id="globalnav-list" class="globalnav-list">
                         <li class="globalnav-item one" role="button">
-                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="../#what-we-do" data-analytics-title="store">
-                            <span class="globalnav-link-text text light link">What We Do</span>
-                            <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">What We Do</span>
+                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="../info" data-analytics-title="store">
+                            <span class="globalnav-link-text text light link">Info</span>
+                            <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Info</span>
                             </a>
                         </li>
                         <li class="globalnav-item two" role="button">
@@ -182,7 +182,7 @@
 
             <section id="bullets" class="section section-bullets three">
                 <div class="section-content dynamic-width">
-                    <div class="section-body">
+                    <div class="section-body justify-content-center">
                         <div class="bullet-points-container">
                             <div class="bullet-point">
                                 <div class="bullet-point-icon">
