--- a/info/index.html
+++ b/info/index.html
@@ -1109,7 +1109,99 @@
                 </div>
             </section>
 
-            <section id="/stats" class="section section-headline-stats six">
+            <section id="roadmap" class="section section-roadmap six width-fit-content">
+                <div class="section-content">
+                    <div class="section-header width-fit-content" style="margin-bottom: 32px;">
+                        <div class="section-header-content justify-content-start width-fit-content">
+                            <h2 class="text light header" style="width:570px;">Our Roadmap</h2>
+                            <svg viewbox="0 0 40 4" style="width:40px;height:4px;">
+                                <rect x="0" y="0" fill="rgb(93, 166, 181)" width="40" height="4"></rect>
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div class="section-body width-fit-content">
+
+
+<div class="roadmap">
+    <div class="roadmap-road">
+        <svg width="1280" height="410" viewBox="0 0 1280 410" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M490 67C418.062 67 358.444 122.776 353.659 194.555L352.306 214.843C346.598 300.466 275.481 367 189.667 367H167L177 354L167 341H189.667C261.793 341 321.566 285.079 326.364 213.113L327.716 192.825C333.412 107.389 404.374 41 490 41C575.626 41 646.588 107.389 652.284 192.825L653.659 213.445C658.444 285.224 718.062 341 790 341C861.938 341 921.556 285.224 926.341 213.445L927.694 193.157C933.402 107.534 1004.52 41 1090.33 41H1280V67H1090.33C1018.21 67 958.434 122.921 953.636 194.887L952.284 215.175C946.588 300.611 875.626 367 790 367C704.374 367 633.412 300.611 627.716 215.175L626.341 194.555C621.556 122.776 561.938 67 490 67Z" fill="var(--colors-grey-600)" style="filter: drop-shadow( 0 0 12px rgba(var(--colors-dark-rgb), .5));"></path>
+            <path d="M0 354H189.667C268.637 354 334.082 292.773 339.335 213.978L340.687 193.69C345.928 115.082 411.218 54 490 54V54C568.782 54 634.072 115.082 639.313 193.69L640.687 214.31C645.928 292.918 711.218 354 790 354V354C868.782 354 934.072 292.918 939.313 214.31L940.665 194.022C945.918 115.227 1011.36 54 1090.33 54H1280" stroke="var(--colors-light)" stroke-opacity="0.8" stroke-width="2" stroke-dasharray="8 16"></path>
+        </svg>
+    </div>
+
+    <div class="roadmap-item-container" style="top: 223px; left: 326px;">
+        <div class="roadmap-item">
+            <div class="roadmap-item-text-container">
+                <div class="roadmap-item-text-title">
+                    <h4 class="text large uppercase light">Backpack V2 Released</h4>
+                </div>
+                <div class="roadmap-item-text-body">
+                    <p class="text light thin">with advanced protection shields and more functionality</p>
+                </div>
+            </div>
+
+            <div class="roadmap-icon-marker">
+                <svg width="30" height="42" viewBox="0 0 30 42" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-right: 16px;">
+                        <path d="M29.25 15.3118C29.25 25.5 15 40.875 15 40.875C15 40.875 0.75 25.5 0.75 15.3118C0.75 7.26954 7.12994 0.75 15 0.75C22.8701 0.75 29.25 7.26954 29.25 15.3118Z" fill="rgb(93, 166, 181)"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.8967 40.7662L15 39.75L16.1033 40.7662L15 41.9641L13.8967 40.7662ZM15.9996 38.6198C15.3748 39.343 15 39.75 15 39.75C15 39.75 14.6251 39.343 14.0004 38.6198C10.8757 35.0027 1.5 23.4751 1.5 15.3813C1.5 7.71489 7.54416 1.5 15 1.5C22.4558 1.5 28.5 7.71489 28.5 15.3813C28.5 23.4751 19.1243 35.0027 15.9996 38.6198ZM16.1033 40.7662C16.103 40.7665 16.1033 40.7662 15 39.75C13.8967 40.7662 13.897 40.7665 13.8967 40.7662L13.8954 40.7649L13.8929 40.7621L13.8843 40.7527L13.8526 40.718C13.8252 40.688 13.7855 40.6442 13.7341 40.5872C13.6314 40.4732 13.4823 40.3065 13.2936 40.0919C12.9161 39.6626 12.3792 39.0411 11.7361 38.2658C10.4513 36.7168 8.73542 34.5457 7.01645 32.0612C5.30059 29.5811 3.56207 26.7607 2.24764 23.9153C0.943311 21.0917 0 18.124 0 15.3813C0 6.92612 6.67662 0 15 0C23.3234 0 30 6.92612 30 15.3813C30 18.124 29.0567 21.0917 27.7524 23.9153C26.4379 26.7607 24.6994 29.5811 22.9835 32.0612C21.2646 34.5457 19.5487 36.7168 18.2639 38.2658C17.6208 39.0411 17.0839 39.6626 16.7064 40.0919C16.5177 40.3065 16.3686 40.4732 16.2659 40.5872C16.2145 40.6442 16.1748 40.688 16.1474 40.718L16.1157 40.7527L16.1071 40.7621L16.1046 40.7649L16.1033 40.7662Z" fill="var(--colors-dark)"></path>
+                </svg>
+            </div>
+        </div>
+    </div>
+
+    <div class="roadmap-item-container" style="top: 166px; left: 605px;">
+        <div class="roadmap-item">
+            <div class="roadmap-item-text-container">
+                <div class="roadmap-item-text-title">
+                    <h4 class="text large uppercase light">Space Probes Launch</h4>
+                </div>
+                <div class="roadmap-item-text-body">
+                    <p class="text light thin">more in-depth research into the asteroids</p>
+                </div>
+            </div>
+
+            <div class="roadmap-icon-marker">
+                <svg width="30" height="42" viewBox="0 0 30 42" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-right: 27px;">
+                        <path d="M29.25 15.3118C29.25 25.5 15 40.875 15 40.875C15 40.875 0.75 25.5 0.75 15.3118C0.75 7.26954 7.12994 0.75 15 0.75C22.8701 0.75 29.25 7.26954 29.25 15.3118Z" fill="rgb(93, 166, 181)"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.8967 40.7662L15 39.75L16.1033 40.7662L15 41.9641L13.8967 40.7662ZM15.9996 38.6198C15.3748 39.343 15 39.75 15 39.75C15 39.75 14.6251 39.343 14.0004 38.6198C10.8757 35.0027 1.5 23.4751 1.5 15.3813C1.5 7.71489 7.54416 1.5 15 1.5C22.4558 1.5 28.5 7.71489 28.5 15.3813C28.5 23.4751 19.1243 35.0027 15.9996 38.6198ZM16.1033 40.7662C16.103 40.7665 16.1033 40.7662 15 39.75C13.8967 40.7662 13.897 40.7665 13.8967 40.7662L13.8954 40.7649L13.8929 40.7621L13.8843 40.7527L13.8526 40.718C13.8252 40.688 13.7855 40.6442 13.7341 40.5872C13.6314 40.4732 13.4823 40.3065 13.2936 40.0919C12.9161 39.6626 12.3792 39.0411 11.7361 38.2658C10.4513 36.7168 8.73542 34.5457 7.01645 32.0612C5.30059 29.5811 3.56207 26.7607 2.24764 23.9153C0.943311 21.0917 0 18.124 0 15.3813C0 6.92612 6.67662 0 15 0C23.3234 0 30 6.92612 30 15.3813C30 18.124 29.0567 21.0917 27.7524 23.9153C26.4379 26.7607 24.6994 29.5811 22.9835 32.0612C21.2646 34.5457 19.5487 36.7168 18.2639 38.2658C17.6208 39.0411 17.0839 39.6626 16.7064 40.0919C16.5177 40.3065 16.3686 40.4732 16.2659 40.5872C16.2145 40.6442 16.1748 40.688 16.1474 40.718L16.1157 40.7527L16.1071 40.7621L16.1046 40.7649L16.1033 40.7662Z" fill="var(--colors-dark)"></path>
+                </svg>
+            </div>
+        </div>
+    </div>
+
+    <div class="roadmap-item-container" style="top: 321px; left: 904px; width: 221px;">
+        <div class="roadmap-item">
+            <div class="roadmap-item-text-container">
+                <div class="roadmap-item-text-title">
+                    <h4 class="text large uppercase light">More Defensive Products</h4>
+                </div>
+                <div class="roadmap-item-text-body">
+                    <p class="text light thin">release more products to save more lives</p>
+                </div>
+            </div>
+
+            <div class="roadmap-icon-marker">
+                <svg width="30" height="42" viewBox="0 0 30 42" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-right: 16px;">
+                        <path d="M29.25 15.3118C29.25 25.5 15 40.875 15 40.875C15 40.875 0.75 25.5 0.75 15.3118C0.75 7.26954 7.12994 0.75 15 0.75C22.8701 0.75 29.25 7.26954 29.25 15.3118Z" fill="rgb(93, 166, 181)"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.8967 40.7662L15 39.75L16.1033 40.7662L15 41.9641L13.8967 40.7662ZM15.9996 38.6198C15.3748 39.343 15 39.75 15 39.75C15 39.75 14.6251 39.343 14.0004 38.6198C10.8757 35.0027 1.5 23.4751 1.5 15.3813C1.5 7.71489 7.54416 1.5 15 1.5C22.4558 1.5 28.5 7.71489 28.5 15.3813C28.5 23.4751 19.1243 35.0027 15.9996 38.6198ZM16.1033 40.7662C16.103 40.7665 16.1033 40.7662 15 39.75C13.8967 40.7662 13.897 40.7665 13.8967 40.7662L13.8954 40.7649L13.8929 40.7621L13.8843 40.7527L13.8526 40.718C13.8252 40.688 13.7855 40.6442 13.7341 40.5872C13.6314 40.4732 13.4823 40.3065 13.2936 40.0919C12.9161 39.6626 12.3792 39.0411 11.7361 38.2658C10.4513 36.7168 8.73542 34.5457 7.01645 32.0612C5.30059 29.5811 3.56207 26.7607 2.24764 23.9153C0.943311 21.0917 0 18.124 0 15.3813C0 6.92612 6.67662 0 15 0C23.3234 0 30 6.92612 30 15.3813C30 18.124 29.0567 21.0917 27.7524 23.9153C26.4379 26.7607 24.6994 29.5811 22.9835 32.0612C21.2646 34.5457 19.5487 36.7168 18.2639 38.2658C17.6208 39.0411 17.0839 39.6626 16.7064 40.0919C16.5177 40.3065 16.3686 40.4732 16.2659 40.5872C16.2145 40.6442 16.1748 40.688 16.1474 40.718L16.1157 40.7527L16.1071 40.7621L16.1046 40.7649L16.1033 40.7662Z" fill="var(--colors-dark)"></path>
+                </svg>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+                    </div>
+                </div>
+
+
+
+            </section>
+
+            <section id="/stats" class="section section-headline-stats seven">
                 <div class="section-content dynamic-width">
                     <div class="section-header justify-content-center width-fit-content">
                         <h2 class="text light header jumbo one">Some statistics</h2>
@@ -1121,7 +1213,7 @@
 
         <div class="horizontal-section-container three">
 
-            <section id="spline-graph" class="section section-spline-graph seven width-fit-content">
+            <section id="spline-graph" class="section section-spline-graph eight width-fit-content">
                 <div class="section-content dynamic-width width-fit-content">
                     <div class="section-body align-items-center width-fit-content" style="--section-elements-height:610px">
                         <div class="tray-container">
@@ -1235,7 +1327,7 @@
                 </div>
             </section>
 
-            <section id="survival-rates" class="section section-survival-rates eight">
+            <section id="survival-rates" class="section section-survival-rates nine">
                 <div class="section-content dynamic-width">
                     <div class="section-header width-fit-content" style="margin-bottom: 32px;">
                         <div class="section-header-content justify-content-start width-fit-content">
@@ -1582,7 +1674,7 @@
                 </div>
             </section>
 
-            <section id="stock-price" class="section section-stock-price nine width-fit-content">
+            <section id="stock-price" class="section section-stock-price tem width-fit-content">
                 <div class="section-content dynamic-width width-fit-content">
                     <div class="section-body width-fit-content">
 
