--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                             </a>
                         </li>
                         <li class="globalnav-item two" role="button">
-                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="#reviews" data-analytics-title="store">
-                            <span class="globalnav-link-text text light link">Reviews</span>
-                            <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Reviews</span>
+                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="/store" data-analytics-title="Services">
+                            <span class="globalnav-link-text text light link">Services</span>
+                            <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Services</span>
                             </a>
                         </li>
                         <li class="globalnav-item three" role="button">
@@ -398,11 +398,11 @@
                                 <div class="price-card-feature text light two">Replaceable Backpack</div>
                                 <div class="price-card-feature text light three">Asteroid Warnings</div>
                                 <br>
-                                <a href="/store/backpack" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store/backpack" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap one"></div>
@@ -417,11 +417,11 @@
                                 <div class="price-card-feature text light two">Auto-call emergency services if hit</div>
                                 <div class="price-card-feature text light three">Advanced mobile application</div>
                                 <br>
-                                <a href="/store/backpack" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store/backpack" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap two"></div>
@@ -436,11 +436,11 @@
                                 <div class="price-card-feature text light two">Monitors for other projectiles</div>
                                 <div class="price-card-feature text light three">In-built wifi router*</div>
                                 <br>
-                                <a href="/store/backpack" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store/backpack" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap three"></div>
@@ -455,11 +455,11 @@
                                 <div class="price-card-feature text light two">Backpack contains space jetpack**</div>
                                 <div class="price-card-feature text light three">Permanant, invisible shield***</div>
                                 <br>
-                                <a href="/store/backpack" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store/backpack" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap four"></div>
@@ -500,6 +500,6 @@
 
         <script src="./assets/js/main.min.js"></script>
         <script src="./assets/js/gsap.js"></script>
-        <script src="./assets/js/index/main.js"></script>
+        <script src="./assets/js/index/main.min.js"></script>
     </body>
 </html>
