info header fix

--- a/info/index.html
+++ b/info/index.html
@@ -84,9 +84,9 @@
                             </a>
                         </li>
                         <li class="globalnav-item two" role="button">
-                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="../#reviews" data-analytics-title="store">
-                            <span class="globalnav-link-text text light link">Reviews</span>
-                            <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Reviews</span>
+                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="/store" data-analytics-title="Services">
+                            <span class="globalnav-link-text text light link">Services</span>
+                            <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Services</span>
                             </a>
                         </li>
                         <li class="globalnav-item three" role="button">
