--- a/index.html
+++ b/index.html
@@ -482,12 +482,12 @@
                     <li class="text light three" role="button"><a href="/info" class="link">About</a></li>
                     <li class="text light four" role="button"><a href="/info/policies/tnc" class="link">Terms</a></li>
                     <li class="text light five" role="button"><a href="/info/policies/privacy" class="link">Privacy Policy</a></li>
-                    <li role="button"><a href="https://www.buymeacoffee.com/tomgxz" target="_blank" class="footer-coffee"><img src="./assets/img/coffee.webp" alt="Buy me a coffee" style="width: 178px; height: 38px; object-fit: cover; object-position: 50% 50%;    border-radius: 10px;"></img></a></li>
+                    <li role="button"><a href="https://www.buymeacoffee.com/tomgxz" target="_blank" class="footer-coffee"><img src="./assets/img/coffee.webp" alt="Buy me a coffee" style="width: 178px; height: 38px; object-fit: cover; object-position: 50% 50%;border-radius: 10px;"></img></a></li>
                 </ul>
             </div>
             <div class="footer-copyright">
-                <div class="visibly-hidden">Copyright © 2021 Punto. All Rights Reserved. Hi rag's</div>
                 <div class="text light one notextselect"></div>
+                <div class="text light two visibly-hidden">Copyright © 2021 Punto. All Rights Reserved. Hi rag's</div>
             </div>
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -500,6 +500,6 @@
 
         <script src="./assets/js/main.min.js"></script>
         <script src="./assets/js/gsap.js"></script>
-        <script src="./assets/js/index/main.min.js"></script>
+        <script src="./assets/js/index/main.js"></script>
     </body>
 </html>
