--- a/info/index.html
+++ b/info/index.html
@@ -1769,6 +1769,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script src="../assets/js/main.min.js"></script>
         <script src="../assets/js/gsap.js"></script>
-        <script src="../assets/js/info/main.js"></script>
+        <script src="../assets/js/info/main.min.js"></script>
     </body>
 </html>
