--- a/store/index.html
+++ b/store/index.html
@@ -360,7 +360,7 @@
                 </ul>
             </div>
             <div class="footer-copyright">
-                <div class="visibly-hidden">Copyright © 2021 Punto. All Rights Reserved. Hi rag's</div>
+                <div class="visibly-hidden">Copyright © 2021 Tom_gxz. All Rights Reserved. Hi rag's</div>
                 <div class="text light one notextselect"></div>
             </div>
         </footer>
