--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             </g>
                         </g>
                     </svg>
-                    <img alt="Hidden headline svg image - meteorite" loading="lazy" src="./assets/img/icon/icon-black/icon-black-512-512.png" class="visibly-hidden" aria-hidden="true" />    
+                    <img alt="Hidden headline svg image - meteorite" loading="lazy" src="./assets/img/icon/icon-black/icon-black-512-512.png" class="visibly-hidden" aria-hidden="true" />
                 </div>
                 <h4 class="text light header jumbo font-one one">Save yourself from doom</h4>
             </div>
@@ -253,7 +253,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" preserveAspectRatio width=128>
                         <path d="M432 176h-416c-8.8 0-15.1 7.2-15.1 15.1C.0001 200.8 7.2 208 15.1 208h416c8.8 0 16-7.2 16-15.1C448 183.2 440.8 176 432 176zM432 304h-416c-8.8 0-15.1 7.2-15.1 15.1S7.2 336 15.1 336h416c8.8 0 16-7.2 16-15.1S440.8 304 432 304z"/>
                     </svg>
-                    <img alt="Hidden headline svg image - bars" loading="lazy" src="./assets/img/svg/grip-lines_light.svg" class="visibly-hidden" aria-hidden="true" />    
+                    <img alt="Hidden headline svg image - bars" loading="lazy" src="./assets/img/svg/grip-lines_light.svg" class="visibly-hidden" aria-hidden="true" />
                 </div>
                 <h4 class="text light header jumbo font-one one">Multiple tiers of subscription</h4>
             </div>
@@ -263,7 +263,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" preserveAspectRatio width=128>
                         <path d="M207.1 256h96c8.836 0 16-7.164 16-16c0-8.838-7.164-16-16-16h-96c-8.836 0-16 7.162-16 16C191.1 248.8 199.2 256 207.1 256zM207.1 320h96c8.836 0 16-7.164 16-16c0-8.838-7.164-16-16-16h-96c-8.836 0-16 7.162-16 16C191.1 312.8 199.2 320 207.1 320zM223.1 64c-17.67 0-32 14.33-32 32c0 17.67 14.33 32 32 32s32-14.33 32-32C255.1 78.33 241.7 64 223.1 64zM511 490.5L479.1 405.9V219.6C479.1 186.7 453.3 160 420.4 160H399.1L400 150.3C400 94.25 357.9 0 256 0C176.6 0 112 64.59 112 144L112 160H91.64C58.7 160 32 186.7 32 219.6v186.3l-31.03 84.59C.3203 492.3 0 494.2 0 496C0 504.8 7.17 512 16 512H112c17.67 0 32-14.33 32-32v-73.38l36.69 36.69C183.7 446.3 187.8 448 192 448h128c4.242 0 8.311-1.686 11.31-4.686l36.69-36.69V480c0 17.67 14.33 32 32 32h96C504.8 512 512 504.8 512 496C512 494.2 511.7 492.3 511 490.5zM112 480H38.91l24.12-65.75c.625-1.766 .9687-3.641 .9687-5.516V219.6C64 204.4 76.41 192 91.63 192h20.38L112 480zM367.1 361.4L313.4 416H198.6L144 361.4V192h223.1V361.4zM367.1 160H144V144C144 82.25 194.3 32 256 32s111.1 50.25 111.1 112V160zM399.1 480L400 192h20.37c15.22 0 27.62 12.41 27.62 27.64v189.1c0 1.875 .3438 3.75 .9687 5.516L473.1 480H399.1zM303.1 96c-8.836 0-16 7.162-16 16c0 8.836 7.164 16 16 16s16-7.164 16-16C319.1 103.2 312.8 96 303.1 96z"/>
                     </svg>
-                    <img alt="Hidden headline svg image - Robot" loading="lazy" src="./assets/img/svg/robot-astromech_light.svg" class="visibly-hidden" aria-hidden="true" />    
+                    <img alt="Hidden headline svg image - Robot" loading="lazy" src="./assets/img/svg/robot-astromech_light.svg" class="visibly-hidden" aria-hidden="true" />
                 </div>
                 <h4 class="text light header jumbo font-one one">Finance astronomical research</h4>
             </div>
@@ -273,7 +273,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" preserveAspectRatio width=128>
                         <path d="M466.5 83.71l-192-80C268.6 1.202 262.3 0 256 0S243.5 1.202 237.6 3.702l-192 80C27.73 91.08 16 108.6 16 127.1c0 257.5 189.5 384 239.1 384c49.26 0 240-124.7 240-384C496 108.6 484.2 91.08 466.5 83.71zM255.9 32L255.9 32C255.9 32 255.8 32 255.9 32zM48 128c0-6.5 3.875-12.25 9.75-14.75L240 37.31v436.9C145.1 430.6 48 298.1 48 128zM463.9 128.3c0 170-97.14 302.4-191.9 345.1V37.37l182.1 75.88C463.3 117.1 463.9 125.8 463.9 128.3z"/>
                     </svg>
-                    <img alt="Hidden headline svg image - Shield" loading="lazy" src="./assets/img/svg/shield_light.svg" class="visibly-hidden" aria-hidden="true" />    
+                    <img alt="Hidden headline svg image - Shield" loading="lazy" src="./assets/img/svg/shield_light.svg" class="visibly-hidden" aria-hidden="true" />
                 </div>
                 <h4 class="text light header jumbo font-one one">24/7 Protection</h4>
             </div>
@@ -283,7 +283,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" preserveAspectRatio width=128>
                         <path d="M320 160H96C78.33 160 64 174.3 64 192v128c0 17.67 14.33 32 32 32h224c17.67 0 32-14.33 32-32V192C352 174.3 337.7 160 320 160zM320 320H96V192h224V320zM448 96H64C28.65 96 0 124.7 0 160v192c0 35.35 28.65 64 64 64h384c35.35 0 64-28.65 64-64V160C512 124.7 483.3 96 448 96zM480 352c0 17.64-14.36 32-32 32H64c-17.64 0-32-14.36-32-32V160c0-17.64 14.36-32 32-32h384c17.64 0 32 14.36 32 32V352zM560 192C551.2 192 544 199.2 544 208v96c0 8.844 7.156 16 16 16S576 312.8 576 304v-96C576 199.2 568.8 192 560 192z"/>
                     </svg>
-                    <img alt="Hidden headline svg image - Battery" loading="lazy" src="./assets/img/svg/battery-three-quarters_light.svg" class="visibly-hidden" aria-hidden="true" />    
+                    <img alt="Hidden headline svg image - Battery" loading="lazy" src="./assets/img/svg/battery-three-quarters_light.svg" class="visibly-hidden" aria-hidden="true" />
                 </div>
                 <h4 class="text light header jumbo font-one one">Infinite battery life</h4>
             </div>
@@ -340,8 +340,8 @@
                         </div>
                         <div class="review-separator"></div>
                         <blockquote class="review-quote" cite="">
-                            <p class="text light">                                
-                                Before this service existed, I cowered in fear every single day, scared that an asteroid was going to go through the atmosphere and shoot through my head and kill me. I was so worried about that before, but now I've found Punto, and they've got my back - a service I actually genuinley truly like.                               
+                            <p class="text light">
+                                Before this service existed, I cowered in fear every single day, scared that an asteroid was going to go through the atmosphere and shoot through my head and kill me. I was so worried about that before, but now I've found Punto, and they've got my back - a service I actually genuinley truly like.
                             </p>
                         </blockquote>
                     </div>
@@ -487,7 +487,7 @@
             </div>
             <div class="footer-copyright">
                 <div class="text light one notextselect"></div>
-                <div class="text light two visibly-hidden">Copyright © 2021 Punto. All Rights Reserved. Hi rag's</div>
+                <div class="text light two visibly-hidden">Copyright © 2021 Tom_gxz. All Rights Reserved. Hi rag's</div>
             </div>
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
