--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                     </div>
                     <ul id="globalnav-list" class="globalnav-list">
                         <li class="globalnav-item one" role="button">
-                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="/info" data-analytics-title="store">
+                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="info" data-analytics-title="store">
                             <span class="globalnav-link-text text light link">Info</span>
                             <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Info</span>
                             </a>
                         </li>
                         <li class="globalnav-item two" role="button">
-                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="/store" data-analytics-title="Services">
+                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="store" data-analytics-title="Services">
                             <span class="globalnav-link-text text light link">Services</span>
                             <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Services</span>
                             </a>
@@ -226,7 +226,7 @@
                     </div>
                 </div>
             </div>
-            <a href="/info" class="btn btn-slide" role="button"><span class="btn-content text">Read More About Us<span></a>
+            <a href="./info" class="btn btn-slide" role="button"><span class="btn-content text">Read More About Us<span></a>
         </section>
         <section id="headlines" class="section section-headlines five">
             <div class="headline one colored color-animation" style="--headline-color:var(--color-animation-changed)" data-animate-color-startcolor="#7d2cfe" data-animate-color-endcolor="#ea38ff" data-animate-color-start="bottom bottom-=200" data-animate-color-end="top top" data-animate-color-ease="linear">
@@ -398,11 +398,11 @@
                                 <div class="price-card-feature text light two">Replaceable Backpack</div>
                                 <div class="price-card-feature text light three">Asteroid Warnings</div>
                                 <br>
-                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="./store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="./store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="./store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap one"></div>
@@ -417,11 +417,11 @@
                                 <div class="price-card-feature text light two">Auto-call emergency services if hit</div>
                                 <div class="price-card-feature text light three">Advanced mobile application</div>
                                 <br>
-                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="./store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="./store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="./store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap two"></div>
@@ -436,11 +436,11 @@
                                 <div class="price-card-feature text light two">Monitors for other projectiles</div>
                                 <div class="price-card-feature text light three">In-built wifi router*</div>
                                 <br>
-                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="./store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="./store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="./store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap three"></div>
@@ -455,11 +455,11 @@
                                 <div class="price-card-feature text light two">Backpack contains space jetpack**</div>
                                 <div class="price-card-feature text light three">Permanant, invisible shield***</div>
                                 <br>
-                                <a href="/store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
-                                <a href="/store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
+                                <a href="./store" class="price-card-link slide-link text link four"><span>Compare backpack plans</span></a>
+                                <a href="./store" class="price-card-link slide-link text link five"><span>See plan & pricing details</span></a>
                             </div>
                             <div class="price-card-footer">
-                                <div class="price-card-button btn btn-slide" data-local-href="/store" role="button"><span class="btn-content text">Subscribe<span></div>
+                                <div class="price-card-button btn btn-slide" data-local-href="./store" role="button"><span class="btn-content text">Subscribe<span></div>
                             </div>
                         </div>
                         <div class="price-card-gap four"></div>
@@ -468,7 +468,7 @@
                 <div class="footnote" role="list">
                     <ul>
                         <li class="text light one" role="listitem">* External sim-card required. Some areas may have limited availability</li>
-                        <li class="text light two role="listitem"">** Read more about the safety of this <a href="/info/policies/safety" class="link" style="display:inline-block;padding:0;">here</a></li>
+                        <li class="text light two" role="listitem">** Read more about the safety of this <a href="./info/policies/safety" class="link" style="display:inline-block;padding:0;">here</a></li>
                         <li class="text light two" role="listitem">*** Requires battery to have > 10% charge to activate</li>
                     </ul>
                 </div>
@@ -478,10 +478,10 @@
             <div class="footer-main">
                 <ul>
                     <li class="text light one" role="button"><a href="#home" class="link">Home</a></li>
-                    <li class="text light two" role="button"><a href="/store" class="link">Services</a></li>
-                    <li class="text light three" role="button"><a href="/info" class="link">About</a></li>
-                    <li class="text light four" role="button"><a href="/info/policies/tnc" class="link">Terms</a></li>
-                    <li class="text light five" role="button"><a href="/info/policies/privacy" class="link">Privacy Policy</a></li>
+                    <li class="text light two" role="button"><a href="./store" class="link">Services</a></li>
+                    <li class="text light three" role="button"><a href="./info" class="link">About</a></li>
+                    <li class="text light four" role="button"><a href="./info/policies/tnc" class="link">Terms</a></li>
+                    <li class="text light five" role="button"><a href="./info/policies/privacy" class="link">Privacy Policy</a></li>
                     <li role="button"><a href="https://www.buymeacoffee.com/tomgxz" target="_blank" class="footer-coffee"><img src="./assets/img/coffee.webp" alt="Buy me a coffee" style="width: 178px; height: 38px; object-fit: cover; object-position: 50% 50%;border-radius: 10px;"></img></a></li>
                 </ul>
             </div>
