--- a/store/index.html
+++ b/store/index.html
@@ -84,7 +84,7 @@
                             </a>
                         </li>
                         <li class="globalnav-item two" role="button">
-                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="/store" data-analytics-title="Services">
+                            <a class="globalnav-link" onclick="if (document.getElementById('globalnav-list').classList.contains('is-active')) { document.getElementById('globalnav-hamburger').classList.toggle('is-active');document.getElementById('globalnav-list').classList.toggle('is-active'); };" href="../store" data-analytics-title="Services">
                             <span class="globalnav-link-text text light link">Services</span>
                             <span class="globalnav-link-hidden-text visibly-hidden" aria-hidden="true">Services</span>
                             </a>
